@@ -1,4 +1,4 @@
-<li class="field${field.error and ' ' + field.widget.error_class}"
+<li class="field ${field.widget.css_name}${field.error and ' ' + field.widget.error_class}"
     title="${field.description}"
     id="item-${field.oid}"
     tal:omit-tag="field.widget.hidden"
